// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterInput component should render a checkbox input 1`] = `
<div>
  <div
    class="pf-v6-c-check ins-c-filter-input__checkbox"
  >
    <input
      aria-invalid="false"
      aria-label="label"
      class="pf-v6-c-check__input"
      data-ouia-component-id="label"
      data-ouia-component-type="PF6/Checkbox"
      data-ouia-safe="true"
      id="id"
      type="checkbox"
      value="value"
    />
    <label
      class="pf-v6-c-check__label"
      for="id"
    >
      label
    </label>
  </div>
</div>
`;

exports[`FilterInput component should render a radio input 1`] = `
<div>
  <div
    class="pf-v6-c-radio ins-c-filter-input__checkbox"
  >
    <input
      aria-invalid="false"
      checked=""
      class="pf-v6-c-radio__input"
      data-ouia-component-id="label"
      data-ouia-component-type="PF6/Radio"
      data-ouia-safe="true"
      id="id"
      name="param"
      type="radio"
      value="value"
    />
    <label
      class="pf-v6-c-radio__label"
      for="id"
    >
      label
    </label>
  </div>
</div>
`;
